--- a/models/New_Dataset_Preprocessing.ipynb
+++ b/models/New_Dataset_Preprocessing.ipynb
@@ -1228,6 +1228,93 @@
         "plt.ylabel('')\n",
         "plt.show()\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Amazon"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import requests\n",
+        "from bs4 import BeautifulSoup\n",
+        "\n",
+        "def get_amazon_bestsellers():\n",
+        "    url = 'https://www.amazon.in/gp/bestsellers/electronics'\n",
+        "    headers = {'User-Agent': 'Mozilla/5.0'}\n",
+        "    response = requests.get(url, headers=headers)\n",
+        "    soup = BeautifulSoup(response.content, 'html.parser')\n",
+        "    \n",
+        "    print(\"Amazon Best Sellers:\")\n",
+        "    for idx, item in enumerate(soup.select('._cDEzb_p13n-sc-css-line-clamp-3_g3dy1'), 1):\n",
+        "        print(f\"{idx}. {item.get_text(strip=True)}\")\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Flipkart"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def get_flipkart_bestsellers():\n",
+        "    url = 'https://www.flipkart.com/search?q=best+selling+electronics'\n",
+        "    headers = {'User-Agent': 'Mozilla/5.0'}\n",
+        "    response = requests.get(url, headers=headers)\n",
+        "    soup = BeautifulSoup(response.content, 'html.parser')\n",
+        "\n",
+        "    print(\"\\nFlipkart Best Sellers:\")\n",
+        "    for idx, item in enumerate(soup.select('a.s1Q9rs'), 1):\n",
+        "        print(f\"{idx}. {item.get_text(strip=True)}\")\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# 2. Google Trends - Top Keywords (Pytrends)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {},
+      "outputs": [
+        {
+          "ename": "ModuleNotFoundError",
+          "evalue": "No module named 'pytrends'",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+            "Cell \u001b[1;32mIn[3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpytrends\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mrequest\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m TrendReq\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mget_google_trends\u001b[39m():\n\u001b[0;32m      4\u001b[0m     pytrends \u001b[38;5;241m=\u001b[39m TrendReq()\n",
+            "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'pytrends'"
+          ]
+        }
+      ],
+      "source": [
+        "from pytrends.request import TrendReq\n",
+        "\n",
+        "def get_google_trends():\n",
+        "    pytrends = TrendReq()\n",
+        "    keywords = ['Smartwatch', 'Gaming Laptop', 'Earbuds', 'Power Bank', 'iPad']\n",
+        "    pytrends.build_payload(keywords, timeframe='now 7-d', geo='IN')\n",
+        "    data = pytrends.interest_over_time()\n",
+        "    print(\"\\nGoogle Trends Popularity (Past 7 Days):\")\n",
+        "    print(data[keywords].mean().sort_values(ascending=False))\n"
+      ]
     }
   ],
   "metadata": {
